--- a/css/main.css
+++ b/css/main.css
@@ -200,20 +200,42 @@ button {
 }
 
 .container {
-  max-width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
 
 .logo {
   font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
   color: #2196f3;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+  }
 }
 
 .logo__header {
@@ -224,103 +246,45 @@ button {
   color: #fff;
 }
 
-.header {
-  border-bottom: 1px solid #ececec;
-}
-
-.header__container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-}
-
-.navigation__list {
-  display: flex;
-  margin-left: 93px;
-}
-
-.navigation__link {
-  display: inline-block;
-  padding: 32px 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.navigation__link:hover, .navigation__link:focus {
-  color: #2196f3;
-}
-
-.navigation__item {
-  position: relative;
-}
-.navigation__item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.contacts {
-  display: flex;
-  margin-left: auto;
-}
-
-.contacts__item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.contacts__link {
-  display: inline-block;
-  padding: 32px 0;
-  color: #757575;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.contacts__link:hover, .contacts__link:focus {
-  color: #2196f3;
-}
-
-.contacts__icon {
-  margin-right: 10px;
-  fill: currentColor;
-  vertical-align: middle;
-}
-
-.current::after {
-  content: "";
-  position: absolute;
-  bottom: -1px;
-  left: 50%;
-  transform: translate(-50%);
-  width: 110%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #2196f3;
-}
-
 .hero {
   display: flex;
-  height: 600px;
+  height: 400px;
   align-items: center;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/main-background-img.jpg");
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
   text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    height: 600px;
+  }
 }
 
 .hero__title {
   margin-bottom: 30px;
   color: #fff;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
   text-transform: uppercase;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.62;
+  letter-spacing: 0.06em;
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+  }
 }
 
 .hero__button {
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  min-width: 216px;
-  padding: 10px 32px;
+  width: 200px;
+  height: 50px;
   border: none;
   font-weight: 700;
   font-size: 16px;
@@ -329,10 +293,21 @@ button {
   color: #fff;
   background-color: #2196f3;
 }
+@media screen and (min-width: 1200px) {
+  .hero__button {
+    width: 216px;
+  }
+}
 
 .advantages {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .advantages {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .advantages__subtitle {
@@ -354,18 +329,34 @@ button {
 
 .advantages__list {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
   gap: 30px;
 }
 
 .advantages__item {
-  width: calc(100% - 90px)/4;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 480px) {
+  .advantages__item {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .advantages__item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages__item {
+    width: calc((100% - 90px) / 4);
+  }
 }
 
 .advantages__icon {
   display: inline-block;
   height: 120px;
-  width: 270px;
+  width: 100%;
   background-color: #f5f4fa;
   border-radius: 4px;
   background-repeat: no-repeat;
@@ -387,6 +378,11 @@ button {
 
 .activities {
   padding-bottom: 94px;
+}
+@media screen and (max-width: 1199px) {
+  .activities {
+    display: none;
+  }
 }
 
 .activities__title {
@@ -431,6 +427,12 @@ button {
   padding-top: 94px;
   padding-bottom: 94px;
   background-color: #f5f4fa;
+}
+@media screen and (max-width: 1199px) {
+  .team {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
 
 .team__title {
@@ -512,6 +514,12 @@ button {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+@media screen and (max-width: 1199px) {
+  .clients {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
 
 .clients__list {
   display: flex;
@@ -553,6 +561,12 @@ button {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+@media screen and (max-width: 1199px) {
+  .portfolio {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
 
 .portfolio__filters {
   display: flex;
@@ -560,7 +574,19 @@ button {
   justify-content: center;
   flex-wrap: wrap;
 }
+@media screen and (max-width: 767px) {
+  .portfolio__filters {
+    justify-content: start;
+    margin-bottom: 40px;
+    width: 330px;
+  }
+}
 
+@media screen and (max-width: 767px) {
+  .portfolio__item:nth-child(n+4) {
+    margin-top: 15px;
+  }
+}
 .portfolio__item:not(:last-child) {
   margin-right: 8px;
 }
@@ -583,13 +609,47 @@ button {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+@media screen and (min-width: 480px) {
+  .works__item {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .works__item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .works__item {
+    width: 370px;
+  }
+}
+
+.works__img {
+  display: block;
+}
+@media screen and (max-width: 767px) {
+  .works__img {
+    width: 450px;
+    margin-top: -30px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .works__img {
+    width: 354px;
+    height: 294px;
+  }
+}
+
 .works__info {
+  max-width: 100%;
   padding: 20px 24px;
   border: 1px solid #eee;
   border-top: 0;
 }
 
 .works__title {
+  max-width: 100%;
   color: #212121;
   font-weight: 700;
   font-size: 18px;
@@ -656,6 +716,36 @@ button {
   background-color: #2f303a;
 }
 
+.footer__container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  display: flex;
+  align-items: baseline;
+  gap: 60px;
+}
+@media screen and (max-width: 1199px) {
+  .footer__container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 93px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .address__item:not(:last-child) {
   margin-bottom: 9px;
 }
@@ -664,6 +754,12 @@ button {
 }
 .address__item:not(:first-child) {
   color: rgba(255, 255, 255, 0.6);
+}
+@media screen and (max-width: 1199px) {
+  .address__item {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .address__link {
@@ -681,16 +777,6 @@ button {
   margin-top: 20px;
 }
 
-.footer__container {
-  display: flex;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  align-items: baseline;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 93px;
-}
-
 .footer__title,
 .subscribe__title {
   font-weight: 700;
@@ -700,6 +786,12 @@ button {
   text-transform: uppercase;
   margin-bottom: 20px;
   color: #fff;
+}
+@media screen and (max-width: 1199px) {
+  .footer__title,
+.subscribe__title {
+    text-align: center;
+  }
 }
 
 .footer__list {
@@ -728,8 +820,22 @@ button {
   fill: #fff;
 }
 
+@media screen and (max-width: 1199px) {
+  .subscribe {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
+
 .subscribe__area {
   display: flex;
+}
+@media screen and (max-width: 1199px) {
+  .subscribe__area {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .subscribe__input {
@@ -740,6 +846,12 @@ button {
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   color: #fff;
+}
+@media screen and (max-width: 1199px) {
+  .subscribe__input {
+    width: 450px;
+    margin-bottom: 20px;
+  }
 }
 
 .subscribe__button {
@@ -757,6 +869,11 @@ button {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
+}
+@media screen and (max-width: 1199px) {
+  .subscribe__button {
+    margin-left: 0;
+  }
 }
 
 .subscribe__icon {
