--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,6 +1,10 @@
 .advantages {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .advantages__title {
   @extend %hidden;
@@ -19,18 +23,29 @@
 
 .advantages__list {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  // justify-content: center;
   gap: 30px;
 }
 
 .advantages__item {
-  width: calc(100% - 3 * 30px) / 4;
+  display: flex;
+  flex-direction: column;
+  @media screen and (min-width: 480px) {
+    width: 100%;
+  }
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 3 * 30px) / 4);
+  }
 }
 
 .advantages__icon {
   display: inline-block;
   height: 120px;
-  width: 270px;
+  width: 100%;
   background-color: $secondary-background-color;
   border-radius: 4px;
   background-repeat: no-repeat;
