--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,35 +1,40 @@
 .clients {
-    padding-top: 94px;
-    padding-bottom: 94px;
+  @media screen and (max-width: 1199px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 .clients__list {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 30px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 .clients__title {
-    margin-bottom: 50px;
-    @include font-size(700, 36px, 1.17, 0.03em);
-    text-align: center;
+  margin-bottom: 50px;
+  @include font-size(700, 36px, 1.17, 0.03em);
+  text-align: center;
 }
 .clients__link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 170px;
-    height: 92px;
-    border: 1px solid currentColor;
-    border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid currentColor;
+  border-radius: 4px;
 
-    color: $icon-color;
-    transition: color 250ms $timing-function, border-color 250ms $timing-function;
-    &:hover, &:focus {
-        color: $main-logo-color;
-    }
+  color: $icon-color;
+  transition: color 250ms $timing-function, border-color 250ms $timing-function;
+  &:hover,
+  &:focus {
+    color: $main-logo-color;
+  }
 }
 
 .clients__icon {
-    fill: currentColor;
-    transition: fill 250ms $timing-function;
+  fill: currentColor;
+  transition: fill 250ms $timing-function;
 }
