--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,68 +1,70 @@
 .header {
-    border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 
 .header__container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    @include font-size (500, 14px, 1.14, 0.02em);
+  @include font-size(500, 14px, 1.14, 0.02em);
 }
 
 .navigation__list {
-    display: flex;
-    margin-left: 93px;
+  display: flex;
+  margin-left: 93px;
 }
 .navigation__link {
-    display: inline-block;
-    padding: 32px 0;
+  display: inline-block;
+  padding: 32px 0;
 
-    transition: color 250ms $timing-function;
+  transition: color 250ms $timing-function;
 
-    &:hover, &:focus {
-        color: $main-logo-color;
-    }
+  &:hover,
+  &:focus {
+    color: $main-logo-color;
+  }
 }
 .navigation__item {
-    position: relative;
-    &:not(:last-child) {
-        margin-right: 50px;
-    }
+  position: relative;
+  &:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 .contacts {
-    display: flex;
-    margin-left: auto;
+  display: flex;
+  margin-left: auto;
 }
 .contacts__item {
-    &:not(:last-child) {
-        margin-right: 30px;
-    }
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 .contacts__link {
-    display: inline-block;
-    padding: 32px 0;
-    color: $secondary-color;
-    
-    transition: color 250ms $timing-function;
+  display: inline-block;
+  padding: 32px 0;
+  color: $secondary-color;
 
-    &:hover, &:focus {
-        color: $main-logo-color;
-    }
+  transition: color 250ms $timing-function;
+
+  &:hover,
+  &:focus {
+    color: $main-logo-color;
+  }
 }
 .contacts__icon {
-    margin-right: 10px;
-    fill: currentColor;
-    vertical-align: middle;
+  margin-right: 10px;
+  fill: currentColor;
+  vertical-align: middle;
 }
 .current::after {
-    content: '';
-    position: absolute;
-    bottom: -1px;
-    left: 50%;
-    transform: translate(-50%);
-    width: 110%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: $main-logo-color;
+  content: '';
+  position: absolute;
+  bottom: -1px;
+  left: 50%;
+  transform: translate(-50%);
+  width: 110%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: $main-logo-color;
 }
