--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,31 +1,41 @@
 .hero {
-    display: flex;
+  display: flex;
+  height: 400px;
+  align-items: center;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url('../images/main-background-img.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+
+  @media screen and (min-width: 1200px) {
     height: 600px;
-    align-items: center;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../images/main-background-img.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    text-align: center;
+  }
 }
 
 .hero__title {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
+  color: $primary-background-color;
+  text-transform: uppercase;
+  @include font-size(900, 26px, 1.62, 0.06em);
 
-    color: $primary-background-color;
-    @include font-size (900, 44px, 1.36, 0.06em);
-    text-transform: uppercase;
+  @media screen and (min-width: 1200px) {
+    @include font-size(900, 44px, 1.36, 0.06em);
+  }
 }
 
 .hero__button {
-    border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    min-width: 216px;
-    padding: 10px 32px;
-    border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  width: 200px;
+  height: 50px;
+  border: none;
+  @include font-size(700, 16px, 1.88, 0.06em);
+  color: $primary-background-color;
+  background-color: $main-logo-color;
 
-    @include font-size (700, 16px, 1.88, 0.06em);
-
-    color: $primary-background-color;
-    background-color: $main-logo-color;
+  @media screen and (min-width: 1200px) {
+    width: 216px;
+  }
 }
