--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,4 +1,8 @@
 .team {
+  @media screen and (max-width: 1199px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
   padding-top: 94px;
   padding-bottom: 94px;
   background-color: $secondary-background-color;
