--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,14 +1,28 @@
 .portfolio {
+  @media screen and (max-width: 1199px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
   padding-top: 94px;
   padding-bottom: 94px;
 }
 .portfolio__filters {
+  @media screen and (max-width: 767px) {
+    justify-content: start;
+    margin-bottom: 40px;
+    width: 330px;
+  }
   display: flex;
   margin-bottom: 50px;
   justify-content: center;
   flex-wrap: wrap;
 }
 .portfolio__item {
+  @media screen and (max-width: 767px) {
+    &:nth-child(n + 4) {
+      margin-top: 15px;
+    }
+  }
   &:not(:last-child) {
     margin-right: 8px;
   }
@@ -36,14 +50,37 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 }
-
+.works__item {
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 354px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+  }
+}
+.works__img {
+  display: block;
+  @media screen and (max-width: 767px) {
+    width: 450px;
+    margin-top: -30px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 354px;
+    height: 294px;
+  }
+}
 .works__info {
+  max-width: 100%;
   padding: 20px 24px;
   border: 1px solid #eee;
   border-top: 0;
 }
 
 .works__title {
+  max-width: 100%;
   color: $primary-color;
   @include font-size(700, 18px, 2, 0.06em);
   margin-bottom: 4px;
