--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -9,9 +9,12 @@
 }
 
 .team__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   @include font-size(700, 36px, 1.17, 0.03em);
   text-align: center;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .team__subtitle {
@@ -29,6 +32,18 @@
 
 .team__img {
   margin-bottom: 30px;
+  // @media screen and (min-width: 480px) {
+  //   width: 450px;
+  //   height: auto;
+  // }
+  @media screen and (min-width: 768px) {
+    width: 354px;
+    height: 374px;
+  }
+  // @media screen and (min-width: 1200px) {
+  //   width: 270px;
+  //   height: auto;
+  // }
 }
 
 .team__list {
@@ -41,7 +56,11 @@
 .team__item {
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  padding-bottom: 30px;
+  padding-bottom: 24px;
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 30px;
+  }
+
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
