--- a/css/main.css
+++ b/css/main.css
@@ -328,23 +328,28 @@ button {
 }
 
 .advantages__list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
+  display: inline-block;
 }
 
 .advantages__item {
-  display: flex;
-  flex-direction: column;
+  display: inline-block;
+  width: 100%;
+  border: none;
 }
-@media screen and (min-width: 480px) {
-  .advantages__item {
-    width: 100%;
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .advantages__item:not(:last-child) {
+    margin-bottom: 30px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .advantages__item {
     width: calc((100% - 30px) / 2);
+  }
+  .advantages__item:nth-child(-n+2) {
+    margin-bottom: 30px;
+  }
+  .advantages__item:nth-child(2n+1) {
+    margin-right: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -436,12 +441,17 @@ button {
 }
 
 .team__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .team__title {
+    margin-bottom: 50px;
+  }
 }
 
 .team__subtitle {
@@ -466,6 +476,12 @@ button {
 .team__img {
   margin-bottom: 30px;
 }
+@media screen and (min-width: 768px) {
+  .team__img {
+    width: 354px;
+    height: 374px;
+  }
+}
 
 .team__list {
   display: flex;
@@ -477,10 +493,15 @@ button {
 .team__item {
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  padding-bottom: 30px;
+  padding-bottom: 24px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: #fff;
+}
+@media screen and (min-width: 1200px) {
+  .team__item {
+    padding-bottom: 30px;
+  }
 }
 
 .socials {
@@ -529,24 +550,43 @@ button {
 }
 
 .clients__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-align: center;
 }
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    margin-bottom: 50px;
+  }
+}
 
 .clients__link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
   height: 92px;
   border: 1px solid currentColor;
   border-radius: 4px;
   color: #afb1b8;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 480px) {
+  .clients__link {
+    width: 210px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .clients__link {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__link {
+    width: 170px;
+  }
 }
 .clients__link:hover, .clients__link:focus {
   color: #2196f3;
