--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -22,20 +22,26 @@
 }
 
 .advantages__list {
-  display: flex;
-  flex-wrap: wrap;
-  // justify-content: center;
-  gap: 30px;
+  display: inline-block;
 }
 
 .advantages__item {
-  display: flex;
-  flex-direction: column;
-  @media screen and (min-width: 480px) {
-    width: 100%;
+  display: inline-block;
+  width: 100%;
+  border: none;
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: calc((100% - 30px) / 2);
+    &:nth-child(-n + 2) {
+      margin-bottom: 30px;
+    }
+    &:nth-child(2n + 1) {
+      margin-right: 30px;
+    }
   }
   @media screen and (min-width: 1200px) {
     width: calc((100% - 3 * 30px) / 4);
