--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,6 +4,7 @@
   left: 50%;
   width: 100vw;
   height: 90%;
+  overflow-y: scroll;
   @media screen and (min-width: 480px) {
     width: 450px;
     height: 609px;
