--- a/css/main.css
+++ b/css/main.css
@@ -1054,14 +1054,19 @@ button {
   left: 50%;
   width: 100vw;
   height: 90%;
-  overflow-y: scroll;
   border-radius: 4px;
   padding: 40px;
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transform: translate(-50%, -50%) scale(1);
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1), opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-height: 610px) {
+  .modal {
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    overflow-y: scroll;
+  }
 }
 @media screen and (min-width: 480px) {
   .modal {
@@ -1073,6 +1078,8 @@ button {
   .modal {
     height: 581px;
     width: 528px;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1), opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 
