--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,7 +4,19 @@
   left: 50%;
   width: 100vw;
   height: 90%;
-  overflow-y: scroll;
+  border-radius: 4px;
+  padding: 40px;
+  background-color: $primary-background-color;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+
+  opacity: 1;
+  @media screen and (max-height: 610px) {
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    overflow-y: scroll;
+  }
   @media screen and (min-width: 480px) {
     width: 450px;
     height: 609px;
@@ -12,17 +24,9 @@
   @media screen and (min-width: 1200px) {
     height: 581px;
     width: 528px;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 500ms $timing-function, opacity 500ms $timing-function;
   }
-  border-radius: 4px;
-  padding: 40px;
-
-  background-color: $primary-background-color;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-
-  opacity: 1;
-  transform: translate(-50%, -50%) scale(1);
-  transition: transform 500ms $timing-function, opacity 500ms $timing-function;
 }
 
 .modal__close {
