--- a/css/main.css
+++ b/css/main.css
@@ -256,40 +256,75 @@ button {
 .header__container {
   display: flex;
   align-items: center;
+  height: 80px;
+  justify-content: space-between;
+}
+.mobile__button {
+  display: inline-flex;
+  border: none;
+  background-color: transparent;
+}
+.mobile__button .icon__close {
+  display: none;
+}
+.mobile__button.is__open .icon__close {
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  .mobile__button {
+    display: none;
+  }
 }
 
-.navigation__list {
-  display: flex;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  margin-left: 93px;
+.mobile__icon {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+@media screen and (min-width: 768px) {
+  .navigation__list {
+    display: flex;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    margin-left: 93px;
+  }
 }
 
 .navigation__link {
-  display: inline-block;
-  padding: 32px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .navigation__link {
+    display: inline-block;
+    padding: 32px 0;
+  }
 }
 .navigation__link:hover, .navigation__link:focus {
   color: #2196f3;
 }
 
-.navigation__item {
-  position: relative;
-}
-.navigation__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 768px) {
+  .navigation__item {
+    position: relative;
+  }
+  .navigation__item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
-.contacts {
-  display: block;
-  margin-left: auto;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
+@media screen and (min-width: 768px) {
+  .contacts {
+    display: block;
+    margin-left: auto;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+  }
 }
 @media screen and (min-width: 1200px) {
   .contacts {
@@ -327,16 +362,18 @@ button {
   vertical-align: middle;
 }
 
-.current::after {
-  content: "";
-  position: absolute;
-  bottom: -1px;
-  left: 50%;
-  transform: translate(-50%);
-  width: 110%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #2196f3;
+@media screen and (min-width: 768px) {
+  .current::after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 50%;
+    transform: translate(-50%);
+    width: 110%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #2196f3;
+  }
 }
 
 .hero {
@@ -1038,12 +1075,12 @@ button {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-hidden {
+.backdrop.is__hidden {
   opacity: 0;
   pointer-events: none;
 }
 
-.backdrop.is-hidden .modal {
+.backdrop.is__hidden .modal {
   transform: translate(-50%, -50%) scale(2) rotate(2turn);
   opacity: 0;
 }
@@ -1053,7 +1090,7 @@ button {
   top: 50%;
   left: 50%;
   width: 100vw;
-  height: 90%;
+  height: 90vh;
   border-radius: 4px;
   padding: 40px;
   background-color: #fff;
