--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -1,22 +1,22 @@
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
 
-    opacity: 1;
-    transition: opacity 250ms $timing-function;
+  opacity: 1;
+  transition: opacity 250ms $timing-function;
 }
 
-.backdrop.is-hidden {
-    opacity: 0;
-    pointer-events: none;
+.backdrop.is__hidden {
+  opacity: 0;
+  pointer-events: none;
 }
 .modal {
-    .backdrop.is-hidden &{
-        transform: translate(-50%, -50%) scale(2) rotate(2turn);
-        opacity: 0;
-    }
+  .backdrop.is__hidden & {
+    transform: translate(-50%, -50%) scale(2) rotate(2turn);
+    opacity: 0;
+  }
 }
