--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,7 +3,7 @@
   top: 50%;
   left: 50%;
   width: 100vw;
-  height: 90%;
+  height: 90vh;
   border-radius: 4px;
   padding: 40px;
   background-color: $primary-background-color;
