--- a/css/main.css
+++ b/css/main.css
@@ -1094,16 +1094,10 @@ button {
   border-radius: 4px;
   padding: 40px;
   overflow-y: scroll;
+  transform: translate(-50%, -50%);
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   opacity: 1;
-}
-@media screen and (max-height: 400px) {
-  .modal {
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-  }
 }
 @media screen and (min-width: 480px) {
   .modal {
