--- a/css/main.css
+++ b/css/main.css
@@ -1093,7 +1093,6 @@ button {
   height: 90vh;
   border-radius: 4px;
   padding: 40px;
-  overflow-y: scroll;
   transform: translate(-50%, -50%);
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1103,6 +1102,12 @@ button {
   .modal {
     width: 450px;
     height: 609px;
+  }
+}
+@media screen and (min-width: 150vh) and (max-height: 609px) {
+  .modal {
+    top: calc(50% + 70px);
+    overflow-y: scroll;
   }
 }
 @media screen and (min-width: 1200px) {
