--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,21 +6,19 @@
   height: 90vh;
   border-radius: 4px;
   padding: 40px;
-  overflow-y: scroll;
   transform: translate(-50%, -50%);
   background-color: $primary-background-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 
   opacity: 1;
-  // @media screen and (max-height: 400px) {
-  //   top: 0;
-  //   left: 50%;
-  //   transform: translateX(-50%);
-  // }
   @media screen and (min-width: 480px) {
     width: 450px;
     height: 609px;
+  }
+  @media screen and (min-width: 150vh) and (max-height: 609px) {
+    top: calc(50% + 70px);
+    overflow-y: scroll;
   }
   @media screen and (min-width: 1200px) {
     height: 581px;
