--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,3 +13,4 @@
 @import './components/footer';
 @import './components/backdrop';
 @import './components/modal';
+@import './components/mobile-menu';
