--- a/css/main.css
+++ b/css/main.css
@@ -1106,6 +1106,7 @@ button {
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   opacity: 1;
+  overflow-y: scroll;
 }
 @media screen and (min-width: 480px) {
   .modal {
@@ -1113,10 +1114,10 @@ button {
     height: 609px;
   }
 }
-@media screen and (min-width: 150vh) and (max-height: 609px) {
+@media screen and (orientation: landscape) and (max-height: 609px) {
   .modal {
-    top: calc(50% + 70px);
-    overflow-y: scroll;
+    top: 0;
+    transform: translate(-50%, 0);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1336,6 +1337,11 @@ button {
   line-height: 1.18;
   letter-spacing: 0.02em;
 }
+@media screen and (min-width: 768px) {
+  .menu {
+    display: none;
+  }
+}
 
 .menu__item:not(:last-child) {
   margin-bottom: 32px;
@@ -1351,6 +1357,11 @@ button {
 .contmenu {
   display: block;
   margin-bottom: 64px;
+}
+@media screen and (min-width: 768px) {
+  .contmenu {
+    display: none;
+  }
 }
 
 .contmenu__item {
@@ -1368,6 +1379,12 @@ button {
   line-height: 1.18;
   letter-spacing: 0.02em;
   color: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .mobsocials {
+    display: none;
+  }
 }
 
 .mobsocials__item {
