--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -30,6 +30,9 @@
   margin-bottom: auto;
   list-style: none;
   @include font-size(500, 40px, 1.18, 0.02em);
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
 .menu__item {
@@ -48,6 +51,9 @@
 .contmenu {
   display: block;
   margin-bottom: 64px;
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 .contmenu__item {
   color: $secondary-color;
@@ -60,7 +66,11 @@
   }
   transition: color 250ms $timing-function, font-size 250ms $timing-function;
 }
-
+.mobsocials {
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
 .mobsocials__item {
   display: inline-block;
   @include font-size(500, 18px, 1.22, 0.02em);
