--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -100,16 +100,16 @@
   vertical-align: middle;
 }
 .current::after {
-  display: none;
-  @media screen and (min-width: 768px) {
-    content: '';
-    position: absolute;
-    bottom: -1px;
-    left: 50%;
-    transform: translate(-50%);
-    width: 110%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: $main-logo-color;
+  @media screen and (max-width: 767px) {
+    display: none;
   }
+  content: '';
+  position: absolute;
+  bottom: -1px;
+  left: 50%;
+  transform: translate(-50%);
+  width: 110%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: $main-logo-color;
 }
