--- a/css/main.css
+++ b/css/main.css
@@ -475,12 +475,18 @@ button {
 }
 
 .advantages__subtitle {
+  text-align: center;
   margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+@media screen and (min-width: 768px) {
+  .advantages__subtitle {
+    text-align: left;
+  }
 }
 
 .advantages__text {
@@ -602,13 +608,17 @@ button {
 .team__title {
   margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   letter-spacing: 0.03em;
   text-align: center;
 }
 @media screen and (min-width: 1200px) {
   .team__title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
     margin-bottom: 50px;
   }
 }
@@ -706,27 +716,21 @@ button {
 .clients__title {
   margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   letter-spacing: 0.03em;
   text-align: center;
 }
 @media screen and (min-width: 1200px) {
   .clients__title {
     margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
   }
 }
 
-.clients__item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 92px;
-  border: 1px solid currentColor;
-  border-radius: 4px;
-  color: #afb1b8;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 @media screen and (max-width: 767px) {
   .clients__item {
     flex-basis: calc((100% - 30px) / 2);
@@ -742,7 +746,18 @@ button {
     flex-basis: calc((100% - 150px) / 6);
   }
 }
-.clients__item:hover, .clients__item:focus {
+
+.clients__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 92px;
+  border: 1px solid currentColor;
+  border-radius: 4px;
+  color: #afb1b8;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.clients__link:hover, .clients__link:focus {
   color: #2196f3;
 }
 
@@ -764,25 +779,28 @@ button {
 
 .portfolio__filters {
   display: flex;
-  margin-bottom: 50px;
-  justify-content: center;
+  justify-content: start;
   flex-wrap: wrap;
+  margin-bottom: 33px;
+  gap: 8px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .portfolio__filters {
-    justify-content: start;
-    margin-bottom: 40px;
-    width: 330px;
+    margin-bottom: 30px;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio__filters {
+    margin-bottom: 50px;
+    justify-content: center;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .portfolio__item:nth-child(n+4) {
-    margin-top: 15px;
+  .portfolio__item {
+    margin-bottom: 7px;
   }
-}
-.portfolio__item:not(:last-child) {
-  margin-right: 8px;
 }
 
 .portfolio__btn {
