--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -10,10 +10,14 @@
   @extend %hidden;
 }
 .advantages__subtitle {
+  text-align: center;
   margin-bottom: 10px;
 
   @include font-size(700, 14px, 1.14, 0.03em);
   text-transform: uppercase;
+  @media screen and (min-width: 768px) {
+    text-align: left;
+  }
 }
 
 .advantages__text {
