--- a/css/main.css
+++ b/css/main.css
@@ -397,27 +397,27 @@ button {
 }
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../images/main-background-img-mobile@2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/main-background-img-mobile@2x.jpg");
   }
 }
 @media screen and (min-width: 481px) and (max-width: 768px) {
   .hero {
-    background-image: url("../images/main-background-img-tablet.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/main-background-img-tablet.jpg");
   }
 }
 @media screen and (min-width: 481px) and (max-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 481px) and (max-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 481px) and (max-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../images/main-background-img-tablet@2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/main-background-img-tablet@2x.jpg");
   }
 }
 @media screen and (min-width: 769px) {
   .hero {
-    background-image: url("../images/main-background-img-desktop.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/main-background-img-desktop.jpg");
   }
 }
 @media screen and (min-width: 769px) and (min-device-pixel-ratio: 2), screen and (min-width: 769px) and (min-resolution: 192dpi), screen and (min-width: 769px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../images/main-background-img-desktop@2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/main-background-img-desktop@2x.jpg");
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1118,7 +1118,7 @@ button {
   top: 50%;
   left: 50%;
   width: 100vw;
-  height: 90vh;
+  height: 609px;
   border-radius: 4px;
   padding: 40px;
   transform: translate(-50%, -50%);
@@ -1270,6 +1270,7 @@ button {
   letter-spacing: 0.03em;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   margin-bottom: 30px;
   color: #757575;
   gap: 5px;
