--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,6 +10,8 @@ $icon-color: #afb1b8;
 $activities-bg-color: rgba(47, 48, 58, 0.8);
 $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap');
+
 @mixin logo-font-style($name: Raleway, $family: sans-serif) {
   font-family: $name, $family;
 }
