add var to media-sizes

--- a/sass/components/_activities.scss
+++ b/sass/components/_activities.scss
@@ -1,5 +1,5 @@
 .activities {
-  @media screen and (max-width: 1199px) {
+  @media screen and (max-width: $desktop) {
     display: none;
   }
   padding-bottom: 94px;
