--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -12,7 +12,7 @@
   display: inline-flex;
   border: none;
   background-color: transparent;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     display: none;
   }
 }
@@ -24,19 +24,19 @@
   vertical-align: middle;
 }
 .navigation {
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: $tablet) {
     display: none;
   }
 }
 .navigation__list {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     display: flex;
     @include font-size(500, 14px, 1.14, 0.02em);
     margin-left: 93px;
   }
 }
 .navigation__link {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     display: inline-block;
     padding: 32px 0;
   }
@@ -48,7 +48,7 @@
   }
 }
 .navigation__item {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     position: relative;
     &:not(:last-child) {
       margin-right: 50px;
@@ -56,22 +56,22 @@
   }
 }
 .contacts {
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: $tablet) {
     display: none;
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     display: block;
     margin-left: auto;
     @include font-size(500, 12px, 1.17, 0.02em);
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     display: flex;
     font-size: 14px;
     line-height: 1.14;
   }
 }
 .contacts__item {
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     &:not(:last-child) {
       margin-right: 30px;
     }
@@ -88,7 +88,7 @@
   &:focus {
     color: $main-logo-color;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     display: inline-block;
 
     padding: 32px 0;
@@ -100,7 +100,7 @@
   vertical-align: middle;
 }
 .current::after {
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: $tablet) {
     display: none;
   }
   content: '';
