--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,6 +9,9 @@ $footer-contact-color: rgba(255, 255, 255, 0.6);
 $icon-color: #afb1b8;
 $activities-bg-color: rgba(47, 48, 58, 0.8);
 $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+$mobile: 479.98px;
+$tablet: 767.98px;
+$desktop: 1199.98px;
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap');
 
