--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,7 +1,7 @@
 .advantages {
   padding-top: 60px;
   padding-bottom: 60px;
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     padding-top: 94px;
     padding-bottom: 94px;
   }
@@ -15,7 +15,7 @@
 
   @include font-size(700, 14px, 1.14, 0.03em);
   text-transform: uppercase;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     text-align: left;
   }
 }
@@ -34,13 +34,13 @@
 .advantages__item {
   display: flex;
   flex-direction: column;
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: $mobile) {
     width: 100%;
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     width: calc((100% - 30px) / 2);
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     width: calc((100% - 3 * 30px) / 4);
   }
 }
