--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,5 +1,5 @@
 .clients {
-  @media screen and (max-width: 1199px) {
+  @media screen and (max-width: $desktop) {
     padding-top: 60px;
     padding-bottom: 60px;
   }
@@ -16,19 +16,19 @@
   margin-bottom: 30px;
   @include font-size(700, 28px, 1.18, 0.03em);
   text-align: center;
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     margin-bottom: 50px;
     @include font-size(700, 36px, 1.17, 0.03em);
   }
 }
 .clients__item {
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: $tablet) {
     flex-basis: calc((100% - 30px) / 2);
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     flex-basis: calc((100% - 2 * 30px) / 3);
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     flex-basis: calc((100% - 5 * 30px) / 6);
   }
 }
