--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -12,7 +12,7 @@
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url('../images/main-background-img-mobile@2x.jpg');
   }
-  @media screen and (min-width: 481px) and (max-width: 768px) {
+  @media screen and (min-width: $mobile) and (max-width: $tablet) {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url('../images/main-background-img-tablet.jpg');
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
@@ -28,7 +28,7 @@
         url('../images/main-background-img-desktop@2x.jpg');
     }
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     height: 600px;
   }
 }
@@ -39,7 +39,7 @@
   text-transform: uppercase;
   @include font-size(900, 26px, 1.62, 0.06em);
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     @include font-size(900, 44px, 1.36, 0.06em);
   }
 }
@@ -54,7 +54,7 @@
   color: $primary-background-color;
   background-color: $main-logo-color;
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     width: 216px;
   }
 }
