--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -3,7 +3,7 @@
   color: $main-logo-color;
   @include font-size(700, 24px, 1.17, 0.03em);
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     @include font-size(700, 26px, 1.19, 0.03em);
   }
 }
