--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -30,7 +30,7 @@
   margin-bottom: auto;
   list-style: none;
   @include font-size(500, 40px, 1.18, 0.02em);
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     display: none;
   }
 }
@@ -51,7 +51,7 @@
 .contmenu {
   display: block;
   margin-bottom: 64px;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     display: none;
   }
 }
@@ -67,7 +67,7 @@
   transition: color 250ms $timing-function, font-size 250ms $timing-function;
 }
 .mobsocials {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     display: none;
   }
 }
