--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,7 +11,7 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   opacity: 1;
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: $mobile) {
     width: 450px;
     height: 609px;
   }
@@ -19,7 +19,7 @@
     top: 0;
     transform: translate(-50%, 0);
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     height: 581px;
     width: 528px;
     transform: translate(-50%, -50%) scale(1);
@@ -60,7 +60,7 @@
   text-align: center;
   color: $primary-color;
   margin-bottom: 12px;
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     line-height: 1.15;
   }
 }
@@ -148,7 +148,7 @@
   margin-bottom: 30px;
   color: $secondary-color;
   gap: 5px;
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     font-size: 14px;
     line-height: 1.71;
   }
