--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,5 +1,5 @@
 .team {
-  @media screen and (max-width: 1199px) {
+  @media screen and (max-width: $desktop) {
     padding-top: 60px;
     padding-bottom: 60px;
   }
@@ -12,7 +12,7 @@
   margin-bottom: 30px;
   @include font-size(700, 28px, 1.18, 0.03em);
   text-align: center;
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     @include font-size(700, 36px, 1.17, 0.03em);
     margin-bottom: 50px;
   }
@@ -46,7 +46,7 @@
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   padding-bottom: 24px;
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     flex-basis: calc((100% - 3 * 30px) / 4);
     padding-bottom: 30px;
   }
