--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,5 +1,5 @@
 .portfolio {
-  @media screen and (max-width: 1199px) {
+  @media screen and (max-width: $desktop) {
     padding-top: 60px;
     padding-bottom: 60px;
   }
@@ -13,17 +13,17 @@
   margin-bottom: 33px;
   gap: 8px;
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: $tablet) and (max-width: $desktop) {
     margin-bottom: 30px;
     justify-content: center;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     margin-bottom: 50px;
     justify-content: center;
   }
 }
 .portfolio__item {
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: $tablet) {
     margin-bottom: 7px;
   }
 }
@@ -51,16 +51,16 @@
   }
 }
 .works__item {
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: $mobile) {
     flex-basis: 100%;
   }
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: $tablet) and (max-width: $desktop) {
     flex-basis: calc((100% - 30px) / 2);
     &:first-child .works__title {
       margin-bottom: 40px;
     }
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     flex-basis: calc((100% - 2 * 30px) / 3);
   }
 }
