--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -4,13 +4,13 @@
   margin-left: auto;
   margin-right: auto;
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: $mobile) {
     width: 480px;
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     width: 768px;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     width: 1200px;
   }
 }
